# exel-to-sql

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2023_11_21_1311-aaba5e2e281d_create_tables.py
exel_parser/: parser.py
sql/: database.py  enums.py  models.py  schemas.py
sql/querys/: orm.py
