[tool.poetry]
name = "exeltosql"
version = "0.1.0"
description = ""
authors = ["Jaraxzus <jaraxzus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.1"
openpyxl = "^3.1.2"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
